k8s/web-zerviez-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-zerviez-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: web-zerviez
          image: peaceofsheep/web-zerviez
          ports:
            - containerPort: 3000
