k8s/zerviez-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zerviez-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: zerviez
          image: peaceofsheep/zerviez:v0.0.2
          ports:
            - containerPort: 8080
