k8s/zerviez-clueter-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zerviez-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 8080
      targetPort: 8080
